// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useEuiButtonColorCSS base 1`] = `
{
  "accent": {
    "map": undefined,
    "name": "19oiedi-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#a11262;background-color:#FDDDE9; 
            
        position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(229,74,145, 0.12);
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(229,74,145, 0.16);
          }
        }
      
            false
          ;;label:base-accent;",
    "toString": [Function],
  },
  "danger": {
    "map": undefined,
    "name": "1lybqqr-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#a71627;background-color:#FDDDD8; 
            
        position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(238,76,72, 0.12);
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(238,76,72, 0.16);
          }
        }
      
            false
          ;;label:base-danger;",
    "toString": [Function],
  },
  "disabled": {
    "map": undefined,
    "name": "tdghnv-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#798EAF;background-color:#FFFFFF; 
            
        position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: undefined;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: undefined;
          }
        }
      
            false
          ;;label:base-disabled;",
    "toString": [Function],
  },
  "primary": {
    "map": undefined,
    "name": "3rkdxy-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#1750ba;background-color:#D9E8FF; 
            
        position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(55,136,255, 0.12);
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(55,136,255, 0.16);
          }
        }
      
            false
          ;;label:base-primary;",
    "toString": [Function],
  },
  "success": {
    "map": undefined,
    "name": "a8qav7-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#09724d;background-color:#C9F3E3; 
            
        position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(4,174,126, 0.12);
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(4,174,126, 0.16);
          }
        }
      
            false
          ;;label:base-success;",
    "toString": [Function],
  },
  "text": {
    "map": undefined,
    "name": "1mc5d51-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#1d2a3e;background-color:#FFFFFF; 
            
        position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(23,80,186, 0.08);
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(23,80,186, 0.12);
          }
        }
      
            
              border: 1px solid #CAD3E2;
            
          ;;label:base-text;",
    "toString": [Function],
  },
  "warning": {
    "map": undefined,
    "name": "13dgtsu-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#825803;background-color:#FDE9B5; 
            
        position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(234,174,1, 0.16);
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(234,174,1, 0.20);
          }
        }
      
            false
          ;;label:base-warning;",
    "toString": [Function],
  },
}
`;

exports[`useEuiButtonColorCSS empty 1`] = `
{
  "accent": {
    "map": undefined,
    "name": "1gcoqlx-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#a11262; 
        position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(229,74,145, 0.12);
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(229,74,145, 0.16);
          }
        }
      ;;label:empty-accent;",
    "toString": [Function],
  },
  "danger": {
    "map": undefined,
    "name": "x1dz9b-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#a71627; 
        position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(238,76,72, 0.12);
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(238,76,72, 0.16);
          }
        }
      ;;label:empty-danger;",
    "toString": [Function],
  },
  "disabled": {
    "map": undefined,
    "name": "1mc4y5h-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#798EAF; 
        position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: undefined;
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: undefined;
          }
        }
      ;;label:empty-disabled;",
    "toString": [Function],
  },
  "primary": {
    "map": undefined,
    "name": "j2avnk-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#1750ba; 
        position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(55,136,255, 0.12);
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(55,136,255, 0.16);
          }
        }
      ;;label:empty-primary;",
    "toString": [Function],
  },
  "success": {
    "map": undefined,
    "name": "1eqjqyp-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#09724d; 
        position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(4,174,126, 0.12);
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(4,174,126, 0.16);
          }
        }
      ;;label:empty-success;",
    "toString": [Function],
  },
  "text": {
    "map": undefined,
    "name": "x2pph5-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#1d2a3e; 
        position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(23,80,186, 0.08);
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(23,80,186, 0.12);
          }
        }
      ;;label:empty-text;",
    "toString": [Function],
  },
  "warning": {
    "map": undefined,
    "name": "wdbtvz-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#825803; 
        position: relative;
        overflow: hidden;

        &:hover:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(234,174,1, 0.16);
          }
        }

        &:active:not(:disabled) {
          &::before {
            inline-size: 100%;
            block-size: 100%;

            content: '';
            position: absolute;
            inset: 0;
            background-color: rgba(234,174,1, 0.20);
          }
        }
      ;;label:empty-warning;",
    "toString": [Function],
  },
}
`;

exports[`useEuiButtonColorCSS fill 1`] = `
{
  "accent": {
    "map": undefined,
    "name": "1moc6vv-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#BC1E70;outline-color:#07101F;
      &:hover:not(:disabled) {
        background-color: #A11262;
      }

      &:active:not(:disabled) {
        background-color: #831652;
      }
    ;;label:fill-accent;",
    "toString": [Function],
  },
  "danger": {
    "map": undefined,
    "name": "1sww27t-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#C61E25;outline-color:#07101F;
      &:hover:not(:disabled) {
        background-color: #A71627;
      }

      &:active:not(:disabled) {
        background-color: #7F1F27;
      }
    ;;label:fill-danger;",
    "toString": [Function],
  },
  "disabled": {
    "map": undefined,
    "name": "191y6d9-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#798EAF;background-color:#ECF1F9;outline-color:#07101F;
      &:hover:not(:disabled) {
        background-color: undefined;
      }

      &:active:not(:disabled) {
        background-color: undefined;
      }
    ;;label:fill-disabled;",
    "toString": [Function],
  },
  "primary": {
    "map": undefined,
    "name": "1i1rpm0-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#0B64DD;outline-color:#07101F;
      &:hover:not(:disabled) {
        background-color: #1750BA;
      }

      &:active:not(:disabled) {
        background-color: #154399;
      }
    ;;label:fill-primary;",
    "toString": [Function],
  },
  "success": {
    "map": undefined,
    "name": "1vg5hkp-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#008A5E;outline-color:#07101F;
      &:hover:not(:disabled) {
        background-color: #09724D;
      }

      &:active:not(:disabled) {
        background-color: #0C5A3F;
      }
    ;;label:fill-success;",
    "toString": [Function],
  },
  "text": {
    "map": undefined,
    "name": "1blxpv3-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#FFFFFF;background-color:#5A6D8C;outline-color:#07101F;
      &:hover:not(:disabled) {
        background-color: #485975;
      }

      &:active:not(:disabled) {
        background-color: #384861;
      }
    ;;label:fill-text;",
    "toString": [Function],
  },
  "warning": {
    "map": undefined,
    "name": "52xsaj-displaysColorsMap-display-color",
    "next": undefined,
    "styles": "color:#6A4906;background-color:#FACB3D;outline-color:#07101F;
      &:hover:not(:disabled) {
        background-color: #F5BC00;
      }

      &:active:not(:disabled) {
        background-color: #EAAE01;
      }
    ;;label:fill-warning;",
    "toString": [Function],
  },
}
`;

exports[`useEuiButtonFocusCSS 1`] = `
{
  "map": undefined,
  "name": "1w5psrn-focusCSS",
  "next": undefined,
  "styles": ";",
  "toString": [Function],
}
`;
